# bare-metal-raspberry-pi

./: CMakeLists.txt  LICENSE  README.md  toolchain-arm-none-eabi.cmake
src/: main.cpp  start.s
src/GPIO/: rpi-gpio.h
